@@ -2,6 +2,8 @@ mlr_2.9:
 - SMOTEWrapper: fix a bug where "sw.nn" was not correctly passed down
 - removed classif.bartMachine and regr.bartMachine, lead to coredumps even in
   other learners when loaded.
+- classif.blackboost, regr.blackboost: made sure that arg "stump" is passed on
+  correctly
 
 mlr_2.8:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
